syntax = "proto3";
import "ItemInfo.proto";
import "Item.proto";
option java_package = "org.sq.gameDemo.common.proto";
option java_outer_classname = "StorePt";

//实体类型
message Store {
    int32 id = 1;
    string name = 2;
    repeated ItemInfo itemInfo = 3;
}

//请求
message StoreRequestInfo {
    uint64 msg_id = 1;      //消息id
    uint64 time = 2;        //时间戳(单位:毫秒)
    int32 id = 3;       //获取全部写-1
    int32 itemInfoId = 4;
    int32 count = 5;
    Item item = 6;
}
//响应
message StoreResponseInfo {
    uint64 msg_id = 1;      //消息id
    int32 result  = 2;
    uint64 time = 3;        //时间戳
    string content = 4;

    Store store = 5;
}

